--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Noite de Mistério</h1>
     <div id="story"></div>
     <form id="input-form">
-      <input type="text" id="user-input" placeholder="Digite seu comando..." autocomplete="off" />
+      <input type="text" id="user-input" placeholder="Digite seu nome..." autocomplete="off" />
       <button type="submit">Enviar</button>
     </form>
   </div>
