--- a/index.html
+++ b/index.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Noite de Mistério</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div id="container">
     <h1>Noite de Mistério</h1>
     <div id="story"></div>
+
     <form id="input-form">
-      <input type="text" id="input1" placeholder="Jogador 1" autocomplete="off" />
-      <input type="text" id="input2" placeholder="Jogador 2" autocomplete="off" style="display: none;" />
-      <button type="submit">Enviar</button>
+      <div id="name-inputs">
+        <input type="text" id="player1-name" placeholder="Nome do Jogador 1" autocomplete="off" />
+        <button type="submit">Enviar</button>
+      </div>
+      <div id="player-inputs" style="display: none">
+        <input type="text" id="input1" placeholder="..." autocomplete="off" />
+        <input type="text" id="input2" placeholder="..." autocomplete="off" />
+        <button type="submit">Enviar</button>
+      </div>
     </form>
   </div>
   <script src="script.js"></script>
